added 2 links in footer- updated html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </ul>
             </div>
           </div>
-          <p>The forecast for next 5 day</p>
+          <p>The forecast for next 5 day </p>
           
           <div class="row">
            <div class="col">day</div>
@@ -95,6 +95,8 @@
            </div>
            <footer>
         👩‍💻Coded by <a href="https://www.linkedin.com/in/shcher-olha/" target=_"blank"> Olha Shcherbak </a>
+        and is <a href="https://github.com/shcher-olha/Plus-_W6_GitHub_My_Weather_Project_l4/commits/main" target="_blank"> open - sourced on GitHub </a>
+        and <a href="https://app.netlify.com/sites/incredible-starship-ec71d6/overview" target="_blank">hosted on Netlify</a>
       </footer>
           </div>
         </div>
