--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
            <footer>
         👩‍💻Coded by <a href="https://www.linkedin.com/in/shcher-olha/" target=_"blank"> Olha Shcherbak </a>
         and is <a href="https://github.com/shcher-olha/Plus-_W6_GitHub_My_Weather_Project_l4/commits/main" target="_blank"> open - sourced on GitHub </a>
-        and <a href="https://app.netlify.com/sites/incredible-starship-ec71d6/overview" target="_blank">hosted on Netlify</a>
+        and <a href="https://incredible-starship-ec71d6.netlify.app/" target="_blank">hosted on Netlify</a>
       </footer>
           </div>
         </div>
