--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
            </div>
            <footer>
-        👩‍💻Coded by <a href="https://www.linkedin.com/in/shcher-olha/" target=_"blank"> Olha Shcherbak </a>
+        👩‍💻Coded by <a href="https://github.com/shcher-olha" target=_"blank"> Olha Shcherbak </a>
         and is <a href="https://github.com/shcher-olha/Plus-_W6_GitHub_My_Weather_Project_l4/commits/main" target="_blank"> open - sourced on GitHub </a>
         and <a href="https://incredible-starship-ec71d6.netlify.app/" target="_blank">hosted on Netlify</a>
       </footer>
